fix: fix alignment form__wrapper

--- a/portfolio/styles/style.css
+++ b/portfolio/styles/style.css
@@ -579,6 +579,10 @@ textarea {
     justify-content: center;
   }
 
+  .form__wrapper {
+    align-items: center;
+  }
+
   .contacts__form input,
   textarea {
     width: 100%;
